Add login using hybrid flow

--- a/.gitignore
+++ b/.gitignore
@@ -15,3 +15,4 @@
 /ImageGallery/IdentityProvider/bin/Debug/netcoreapp1.1
 /ImageGallery/IdentityProvider/obj
 /ImageGallery/IdentityProvider/wwwroot/lib
+/ImageGallery/IdentityProvider/localhost.cer
