--- a/SocialNetwork/SocialNetwork.OAuth/appsettings.json
+++ b/SocialNetwork/SocialNetwork.OAuth/appsettings.json
@@ -4,5 +4,8 @@
     "LogLevel": {
       "Default": "Warning"
     }
+  },
+  "ConnectionStrings": {
+    "SocialNetwork.OAuth": "Server=(localdb)\\v11.0;Database=SocialNetwork.OAuth;Trusted_Connection=True;"
   }
 }
