Add user validation

--- a/SocialNetwork/SocialNetwork.OAuth/appsettings.json
+++ b/SocialNetwork/SocialNetwork.OAuth/appsettings.json
@@ -6,6 +6,7 @@
     }
   },
   "ConnectionStrings": {
-    "SocialNetwork.OAuth": "Server=(localdb)\\v11.0;Database=SocialNetwork.OAuth;Trusted_Connection=True;"
+    "SocialNetwork.OAuth": "Server=(localdb)\\v11.0;Database=SocialNetwork.OAuth;Trusted_Connection=True;",
+    "SocialNetwork": "Server=(localdb)\\v11.0;Database=SocialNetwork;Trusted_Connection=True;"
   }
 }
