--- a/SocialNetwork/SocialNetwork.OAuth/SocialNetwork.OAuth.csproj
+++ b/SocialNetwork/SocialNetwork.OAuth/SocialNetwork.OAuth.csproj
@@ -26,5 +26,8 @@
   <ItemGroup>
     <Folder Include="wwwroot\" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\SocialNetwork.Data\SocialNetwork.Data.csproj" />
+  </ItemGroup>
 
 </Project>
